@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://opensource.org/licenses/bsd-license.php">BSD</license>
  <notes>
+* [jan] Fix disabling of actions by locking preferences.
 * [jan] Sort blacklist and whitelist for display instead of for storage.
  </notes>
  <contents>
@@ -979,6 +980,7 @@
    <date>2011-08-02</date>
    <license uri="http://opensource.org/licenses/bsd-license.php">BSD</license>
    <notes>
+* [jan] Fix disabling of actions by locking preferences.
 * [jan] Sort blacklist and whitelist for display instead of for storage.
    </notes>
   </release>
