@@ -2,6 +2,7 @@
 v2.0.5-git
 ----------
 
+[jan] Fix disabling of actions by locking preferences.
 [jan] Sort blacklist and whitelist for display instead of for storage.
 
 
